--- a/Kontakt.html
+++ b/Kontakt.html
@@ -21,7 +21,7 @@
     <header class="mobile-absolute">
       <div id="first">
         <div id="image">
-          <a href="Domov"><img src="Images/LOGO 16.39.19.png" alt="LOGO"></a>
+          <a href="Domov"><img src="Images/title-logo.png" alt="LOGO"></a>
         </div>
        <a id="nazev" href="Domov">
         <div>
